# srt_translator

./: .env-example  Dockerfile  example.srt  pyproject.toml  requirements.txt
src/: app.py  srt_translator.py
